@@ -34,6 +34,7 @@ This release also includes changes from <<release-3-3-3, 3.3.3>>.
 * Moved `TraversalEngine` to `gremlin-test` as it has long been only used in testing infrastructure.
 * Removed previously deprecated Structure API exceptions related to "element not found" situations.
 * Removed previously deprecated `rebindings` options from the Java driver API.
+* Removed previously deprecated `AuthenticationSettings.className` configuration option in Gremlin Server.
 * Removed support for Giraph.
 
 == TinkerPop 3.3.0 (Gremlin Symphony #40 in G Minor)
